--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # "/" + 仓库的名字. 资源文件的路径组成部分
-baseurl: "/Girls-Coding-Day-Jekyll-blog-4"
+baseurl: "/my_first_web"
 
 # 网页的标题
-title: "Girls Coding Day"
-username: yourname
+title: "海来尔子"
+username: 海来尔子
 # 网站副标题
-description: "架起女性与编程的桥梁"
+description: "强棒少女的陪伴日记"
 
-aboutme: "我的生活，工作 😉🍕🎧"
+aboutme: "我像花儿一样"
 
 # 其它配置, 可忽略, 无需修改
 markdown: kramdown
